# wordament-solver

./: .gitignore  Gemfile  LICENSE  README.md  app.js  blog.html  index.html  pyproject.toml  solver.js  style.css  wordament.gemspec
blog/: wordament_solver_python.md
config/: dutch.json  dutch.txt
js/: app.js  solver.js
lib/: wordament.rb
lib/wordament/: version.rb
spec/: spec_helper.rb  wordament_spec.rb
tests/: test_solver.py
wordament/: __init__.py  __main__.py  solver.py  trie.py
