[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordament"
version = "0.1.0"
authors = [
    { name = "Erwin Jansen", email = "pokowaka@gmail.com" }
]
description = "A library to solve Wordament boards using a Trie data structure."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["wordament*"]

[project.scripts]
wordament = "wordament.__main__:main"
